trunk/NewArchive/1ae6fbbdd90525f21fab7ecee6bb3ad1-85f36b3d494cd7b170078b8b41f2a609/output
+ g++ -O2 -Wall -pedantic main.cpp
main.cpp: In function ‘int main()’:
main.cpp:38:6: error: expected ‘;’ before ‘t’
 time t;
      ^
main.cpp:38:7: warning: statement is a reference, not call, to function ‘time’ [-Waddress]
 time t;
       ^
main.cpp:38:7: warning: statement has no effect [-Wunused-value]
main.cpp:39:1: error: ‘t’ was not declared in this scope
 t.settime(13,27,6);
 ^
